[gd_scene load_steps=13 format=2]

[ext_resource path="res://Backgrounds/sala default.png" type="Texture" id=1]
[ext_resource path="res://setinha.gd" type="Script" id=2]
[ext_resource path="res://Objects/setinha.png" type="Texture" id=3]
[ext_resource path="res://cena1.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Porta_abrindo.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Hallway_Ambience.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/sonzinho de fundo(_).mp3" type="AudioStream" id=7]
[ext_resource path="res://Mike.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/postit.png" type="Texture" id=9]
[ext_resource path="res://videos/Animation_and_Tutorial.webm" type="VideoStream" id=10]
[ext_resource path="res://Sounds/papel.mp3" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 132.5, 96.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Porta" type="Button" parent="."]
margin_left = 949.0
margin_top = 158.0
margin_right = 1030.0
margin_bottom = 491.0
mouse_default_cursor_shape = 2

[node name="Postit" type="Button" parent="."]
margin_left = 780.0
margin_top = 497.0
margin_right = 810.0
margin_bottom = 531.0
rect_rotation = 120.713
rect_pivot_offset = Vector2( 6, 11 )
mouse_default_cursor_shape = 2
action_mode = 0

[node name="SalaDefault" type="Sprite" parent="."]
position = Vector2( 514, 301.5 )
scale = Vector2( 0.156464, 0.163381 )
texture = ExtResource( 1 )

[node name="Setinha" type="Sprite" parent="SalaDefault"]
position = Vector2( 1687.29, 731.419 )
scale = Vector2( 1.31884, 1.26301 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Som_fundo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -35.831

[node name="Porta_Abrindo_som" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -18.353

[node name="Corredor_som" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -44.572

[node name="KinematicBody2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 492, 406 )

[node name="Popup" type="Popup" parent="."]
margin_right = 1029.0
margin_bottom = 601.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = -6.0
margin_top = -7.0
margin_right = 1033.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 0.596078 )

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 518, 282 )
scale = Vector2( 0.536979, 0.524768 )
texture = ExtResource( 9 )

[node name="x" type="Button" parent="Popup"]
margin_left = 523.0
margin_top = 524.0
margin_right = 556.0
margin_bottom = 554.0
mouse_default_cursor_shape = 2
action_mode = 0
text = "OK"

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = -1.0
margin_right = 1031.0
margin_bottom = 607.0
stream = ExtResource( 10 )
volume_db = -30.59

[node name="Tween" type="Tween" parent="."]

[node name="Mesa" type="KinematicBody2D" parent="."]
position = Vector2( 129.75, 477.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mesa"]
position = Vector2( -5.25, 5.25 )
shape = SubResource( 1 )

[node name="papelzin_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[connection signal="pressed" from="Porta" to="." method="_on_Porta_pressed"]
[connection signal="pressed" from="Postit" to="." method="_on_Postit_pressed"]
[connection signal="pressed" from="Popup/x" to="." method="_on_x_pressed"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
